--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,8 @@ body {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    width: 100%; }
+    width: 100%;
+    letter-spacing: 2px; }
   #mainContainer .buttons {
     position: absolute;
     margin-top: 100px;
