--- a/styles/style.sass
+++ b/styles/style.sass
@@ -38,7 +38,7 @@ body
     margin-right: auto
     text-align: center
     width: 100%
-
+    letter-spacing: 2px
 
   .buttons
     position: absolute
