--- a/styles/style.sass
+++ b/styles/style.sass
@@ -21,8 +21,8 @@ body
 #mainContainer 
   width: 100%
   text-align: center
-  // background-image: url("http://data.hdwallpapers.im/double_rainbow.jpg")
-  background-image: url("https://media.giphy.com/media/kVicp4f3OJoze/giphy.gif")
+  background: url("../images/double_rainbow_tint.png")
+  // background-image: url("https://media.giphy.com/media/kVicp4f3OJoze/giphy.gif")
   background-size: cover
   -webkit-background-size: cover
   -moz-background-size: cover
