--- a/styles/style.css
+++ b/styles/style.css
@@ -131,4 +131,8 @@ body {
       #mainContainer #currentTemp .hourlyTempStyles p {
         font-size: 14px; }
 
+@media (max-width: 500px) {
+  #currentTemp {
+    flex-direction: column; } }
+
 /*# sourceMappingURL=style.css.map */
